--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -2,11 +2,13 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 20rem;
+  width: 18rem;
   height: 100%;
   box-shadow: 2px 2px 50px rgb(204, 204, 204);
   overflow-y: scroll;
-
+  transform: translateX(-100%);
+  transition: all 0.5s ease;
+  opacity: 0;
   h2 {
     padding: 2rem;
   }
@@ -56,4 +58,9 @@
 
 .selected {
   background-color: rgb(194, 195, 255);
+}
+
+.active-library {
+  transform: translateX(0%);
+  opacity: 1;
 }
