feat: styling slider track

--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -8,15 +8,25 @@
 .time-control {
   width: 50%;
   display: flex;
-  input {
-    flex: 1;
-    padding: 1rem 0rem;
+  input[type="range"] {
+    width: 100%;
+    -webkit-appearance: none;
+    background-color: transparent;
+    cursor: pointer;
+    &:focus {
+      outline: none;
+    }
+    &::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      height: 16px;
+      width: 16px;
+    }
   }
-  p{
-    padding: 1rem;
+  p {
+    padding: 0.9rem;
   }
 }
-.play-control{
+.play-control {
   width: 30%;
   display: flex;
   align-items: center;
@@ -24,4 +34,25 @@
   svg {
     cursor: pointer;
   }
+}
+
+.track {
+  width: 100%;
+  height: 1rem;
+  margin: 1rem 0rem;
+  position: relative;
+  background-color: cadetblue;
+  overflow: hidden;
+  border-radius: 20rem;
+}
+
+.animate-track {
+  background-color: rgb(204, 204, 204);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateX(10%);
+  pointer-events: none;
 }
