feat: mobile responsive

--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -4,6 +4,7 @@
   left: 0;
   width: 18rem;
   height: 100%;
+  background-color: white;
   box-shadow: 2px 2px 50px rgb(204, 204, 204);
   overflow-y: scroll;
   transform: translateX(-100%);
@@ -18,6 +19,7 @@
     align-items: center;
     padding: 1rem 2rem 1rem 2rem;
     cursor: pointer;
+    transition: background-color 0.5s ease;
     img {
       width: 30%;
     }
@@ -63,4 +65,10 @@
 .active-library {
   transform: translateX(0%);
   opacity: 1;
+}
+
+@media screen and (max-width: 768px) {
+  .library {
+    width: 100%;
+  }
 }
