feat: change app name

--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -15,6 +15,9 @@ nav {
       color: #ffffff;
     }
   }
+  h1 {
+    font-family: "Kaushan Script", cursive;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -24,4 +27,3 @@ nav {
     }
   }
 }
-
